# chatroom

./: .gitignore  Cargo.toml  README.md
server/: Cargo.toml
server/src/: lib.rs  server.rs
server/src/user/: shareduser.rs  user.rs
server/src/utils/: channel.rs
shared/: Cargo.toml
shared/src/: packet.rs
