[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
async-trait = "0.1.88"
uuid = "1.16.0"

[dependencies.bincode]
version = "2.0.1"
features = ["serde"]

[dependencies.tokio]
version = "1.45.0"
features = ["net", "io-util"]